# ZhiLight

./: .env  CMakeLists.txt  README.md  api_server_profile.nsys-rep  local.note.md  pyproject.toml  requirements.txt  setup.py
3rd/bmengine/bmengine/core/: context.cpp  layer.cpp  tensor_print.cpp
3rd/easyengine/: CmakeLists.txt
3rd/easyengine/easyengine/: CmakeLists.txt
3rd/easyengine/easyengine/core/: CUDACachingAllocator.cpp  allocator.cpp  engine.cpp  exception.cpp  memory.cpp  stream.cpp
3rd/easyengine/easyengine/include/easyengine/c10d/: c10d.hh
3rd/easyengine/easyengine/include/easyengine/core/: CUDACachingAllocator.hh  allocator.hh  dtype.hh  engine.hh  exception.h  guard.hh  memory.hh  stream.hh  tensor.hh  thread_pool.hh
3rd/easyengine/easyengine/logger/: kernel_time_trace.hpp  time.hh
cmake/: bmengine.cmake
csrc/easyengine/easyengine/c10d/: c10d.cpp
csrc/easyengine/easyengine/cmake/: FindNCCL.cmake
csrc/easyengine/easyengine/core/: context.cpp  exception.cpp  guard.cpp  stream.cpp  tensor.cpp  tensor_impl.cpp  tensor_print.cpp
csrc/easyengine/easyengine/include/easyengine/core/: context.hh  contextImpl.hh  context_impl.hh  core.hh  engine.hh  exception.hh  export.hh  layer.hh  logger.hh  storage.hh  tensor_impl.hh  tensor_ops.hh  utils.hh
csrc/easyengine/easyengine/include/easyengine/functions/: typecast.hh
csrc/easyengine/easyengine/logger/: std_log_op.hpp
csrc/easyengine/easyengine/test/: test_nvml.cpp
csrc/easyengine/test/: ncclReduce  ncclReduce.cu
docs/: Up2Down.drawio
docs/easyengine/: context_device_engine_design.md  lock_free.md  mem_tensor_egine_design.md  memory_management.md
examples/: offline_inference.py
src/model/: model_context.h
src/nn/attention/: attention_kernel.cu
src/py_export/: py_model_config.cpp
zhilight/: llama.py
zhilight/config/: adapter.py  cohere_adapter.py  config_util.py  deepseek_adapter.py  dev_config.py  dist_config.py  llama_adapter.py  qwen2_adapter.py
zhilight/server/openai/engine/: async_llm_engine.py  llm_engine.py
zhilight/server/openai/entrypoints/: api_server.py  preparse_cli_args.py  serving_chat.py  serving_engine.py
